results/SVCOMP/4-shot/log-Cookie-2024_03_18_14_14_01.txt
public class Cookie {
  private /*@ spec_public @*/ String name;
  private /*@ spec_public @*/ String value;

  //@ requires name != null && value != null;
  //@ assignable this.name, this.value;
  //@ ensures this.name == name && this.value == value;
  public Cookie(String name, String value) {
    this.name = name;
    this.value = value;
  }

  //@ ensures \result == name;
  public /*@ pure @*/ String getName() {
    return name;
  }

  //@ ensures \result == value;
  public /*@ pure @*/ String getValue() {
    return value;
  }
}
/home/max/Documents/JMLGPT/tmp/Cookie.java:6: error: References to 'this' are not permitted in constructor assignable clauses: this
  //@ assignable this.name, this.value;
                 ^
/home/max/Documents/JMLGPT/tmp/Cookie.java:6: error: References to 'this' are not permitted in constructor assignable clauses: this
  //@ assignable this.name, this.value;
                            ^
2 errors

